# llama-recipes

./: .gitignore  coref_eval.py  multi_node_mention.slurm  pyproject.toml  train_and_eval.sh
ancora_dataset/ancora-3.0.1es/postprocessed/next_sentence_gold_mentions/: dev.parquet  test.parquet
configs/: datasets.py
corefud_1_1/CorefUD-1.1-public/data/CorefUD_Spanish-AnCora/: README.md  es_ancora-corefud-dev.conllu  test.conllu
corefud_1_1/CorefUD-1.1-public/data/CorefUD_Spanish-AnCora/postprocessed/mention_detection/: dev.parquet
corefud_1_1/CorefUD-1.1-public/data/CorefUD_Spanish-AnCora/postprocessed/next_sentence_gold_mentions/: dev.parquet
eval/: eval_utils.py
eval/data/: results.parquet  test.key  test.response
experiment_2023-10-04_12-20-18/: README.md
experiment_2023-10-04_19-32-41/: results.parquet  test.key  test.response
ft_datasets/: __init__.py  ancora_dataset.py  ancora_dataset_ud.py  ancora_dataset_ud_mention.py  coref_instructions.py  instructions.json  instructions.py
models_aux/: adapter_config.json
utils/: dataset_utils.py  train_utils.py
